# Fast_API_app_CICD

./: Dockerfile  README.md  alembic.ini  build_app.bat  docker-compose.yaml  init_db.sql  pyproject.toml  pytest-coverage.txt  pytest.ini  run_docker.bat
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 082c76ef0431_initial_migration_v2.py  4c49e526fe7d_add_description_to_activities.py  634f1ab07e10_initial_migration_from_existing_database.py  7aebabcba870_changed_age_by_date_of_birth_in_user_.py
app/api/: main.py  routes.py
app/core/: config.json  config.py
app/db/: db_connection.py  db_setup.py  utility.py
app/db/models/: activity.py  mixins.py  partner_request.py  user.py
app/frontend/: create_account.html  landing_page.html  login.html  user_create.html
app/routes/: activity.py  partner_request.py  user.py
app/schemas/: activity.py  date_ideas.py  partner_request.py  user.py
app/utils/: logger.py  user.py
scripts/: docker_run.bat  pull_and_use_app.bat  pull_docker_image_from_hub_and_run.bat  run_docker.bat
src/: db_connection.py  test_postgre.py
tests/: test_api.py  test_db_connection.py
