[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = "Build CI/CD pipeline for FastAPI application"
authors = ["RonanRibouletPython <newsletterpython13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
